# quant-auto-agent

./: .gitignore  CLAUDE.md  docker-compose.yml  main.py  pyproject.toml
adapters/: __init__.py  telegram_bot.py  topstep_client.py  yfinance_client.py
adapters/alpaca/: __init__.py  client.py  config.py  market_stream.py  rest_client.py  trade_stream.py
adapters/oanda/: client.py  config.py  market_stream.py  rest_client.py  trade_stream.py
adapters/projectx/: __init__.py  auth.py  client.py  config.py  market_hub.py  rest_client.py  user_hub.py
agents/nodes/: brain.py  execution.py  guardrail.py  market_reader.py
core/: constants.py  graph.py  state.py
docs/: agent_flow.puml  architecture.puml
shared/: database.py  models.py
utils/: indicators.py  llm.py  logger.py
